<resources>
    <string name="app_name">DostavkaUz</string>
    <string name="asosiy">Асосий</string>
    <string name="tarix">Тарих</string>
    <string name="yuk_yuborish">Юк юбориш</string>
    <string name="tariflar">Тарифлар</string>
    <string name="kabinet">Кабинет</string>
    <string name="tasdiqlash_kodi">Тасдиқлаш коди</string>
    <string name="raqamni_o_zgartirish">Рақамни ўзгартириш</string>
    <string name="kodni_qayta_so_rash">Кодни қайта сўраш</string>
    <string name="kirish">Кириш</string>
    <string name="kodni_olish">Кодни олиш</string>
    <string name="iltimos_tasdiqlash_kodini_toliq_kiriting">Илтимос тасдиқлаш кодини тўлиқ киритинг!</string>
    <string name="siz_kiritgan_kod_xato">Сиз киритган код нотўғри</string>
    <string name="telefon_raqami">Телефон рақами</string>
    <string name="ro_yxatdan_o_tish">Рўйхатдан ўтиш</string>
    <string name="asosiy_telefon_raqami">Асосий телефон рақами</string>
    <string name="shaxsiy_ma_lumotlar">Шахсий маълумотлар</string>
    <string name="ismingiz">Исмингиз</string>
    <string name="familiyangiz">Фамилиянгиз</string>
    <string name="telefon_2">Телефон 2</string>
    <string name="qo_shimcha_mailshot">Қўшимча маълумот</string>
    <string name="saqlash">Сақлаш</string>
    <string name="tasdiqlash_kodi_ushbu_raqamga_yuborildi">Тасдиқлаш коди ушбу рақамга юборилди:</string>
    <string name="iltimos_ismingizni_kiriting">Илтимос исмингизни киритинг!</string>
    <string name="iltimos_familiyangizni_kiriting">Илтимос фамилиянгизни киритинг!</string>
    <string name="iltimos_otangizni_ismini_kiriting">Илтимос отангизнинг исмини киритинг!</string>
    <string name="otangizni_ismi">Отангизнинг исми</string>
    <string name="royxatdan_otish_yakunlandi">Рўйхатдан ўтиш муваффақиятли якунланди</string>
    <string name="qabul_qilib_oluvchining_telefon_raqamini_kiriting">Қабул қилиб олувчининг телефон рақамини киритинг!</string>
    <string name="davom_etish">Давом этиш</string>
    <string name="telefon_raqamni_toliq_kiriting">Телефон рақамни тўлиқ киритинг</string>
    <string name="qayerdan">Қайердан</string>
    <string name="joylashuvni_tanlang">Жойлашувни танланг</string>
    <string name="qayerga">Қайерга</string>
    <string name="mahallani_tanlang">Маҳаллани танланг</string>
    <string name="tumanni_tanlang">Туманни танланг</string>
    <string name="viloyatni_tanlang">Вилоятни танланг</string>
    <string name="nimalarni_yuborasiz">Нималарни юборасиз</string>
    <string name="yuk_nomlarini_kiriting">Юк номларини киритинг</string>
    <string name="keyingisi">Кейингиси</string>
    <string name="manzillar">Манзиллар</string>
    <string name="qabul_qiluvchi_malumotlari">Қабул қилувчининг маълумотлари</string>
    <string name="qabul_qiluvchi_ismi">Қабул қилувчининг исми</string>
    <string name="ismni_kiriting">Исмни киритинг</string>
    <string name="familiyani_kiriting">Фамилияни киритинг</string>
    <string name="qabul_qiluvchining_familiyasi">Қабул қилувчининг фамилияси</string>
    <string name="qabul_qiluvchining_otasining_ismi">Қабул қилувчининг отасининг исми</string>
    <string name="otasining_ismini_kiriting">Отасининг исмини киритинг</string>
    <string name="ikkinichi_telefon_raqami">Иккиничи телефон рақами</string>
    <string name="telefon_raqami_2">Телефон рақами 2</string>
    <string name="qo_shimcha_izohlar">Қўшимча изоҳлар</string>
    <string name="izohlar">Изоҳлар</string>
    <string name="manzilni_kiriting">Манзилни киритинг</string>
    <string name="yakunlash">Якунлаш</string>
    <string name="rasmni_tanlash">Расмни танлаш</string>
    <string name="passport">Паспорт</string>
    <string name="qabul_qiluvchining_pasport_rasmini_tanlang_jpg_formatda">Қабул қилувчининг паспорт расмини танланг (JPG форматда)</string>
    <string name="tanlash">Танлаш</string>
    <string name="asosiy_telefon_raqamni_kiriting">Асосий телефон рақамни киритинг</string>
    <string name="pochta_yuborish">Почта юбориш</string>
    <string name="xatolik">Хатолик</string>
    <string name="bekor_qilish">Бекор қилиш</string>
    <string name="yopish">Ёпиш</string>
    <string name="yuborish">Юбориш</string>
    <string name="iltimos_pasport_rasmini_tanlang">Илтимос паспорт расмини танланг!</string>
    <string name="internet_boglanish">Интернетга боғланишда хатолик</string>
    <string name="ilovadan_foydalanish_uchun_internetga">Иловадан фойдаланиш учун илтимос интернетга уланинг!</string>
    <string name="yangiliklar">Янгиликлар</string>
    <string name="buyurtma_raqami">Буюртма рақами</string>
    <string name="buyurtmalarni_izlash">Буюртмаларни излаш</string>
    <string name="barchasini_ko_rish">Барчасини кўриш</string>
    <string name="buyurtmalar_tarixi">Буюртмалар тарихи</string>
    <string name="qayta_urinish">Қайта уриниш</string>
    <string name="pochta_haqida">Почта ҳақида</string>
    <string name="barcode">Barcode</string>
    <string name="jismoniy_shaxs">Жисмоний шахс</string>
    <string name="yuridik_shaxs">Юридик шахс</string>
    <string name="korxona_nomi">Корхона номи</string>
    <string name="korxona_raxbari">Корхона рахбарининг исми ва фамилияси</string>
    <string name="masul_shaxs">Маъсул шахс</string>
    <string name="korxona_nomini_kiriting">Корхона номини киритинг</string>
    <string name="ism_va_familiyani_kiriting">Исм ва фамилияни киритинг</string>
    <string name="chiqish">Чиқиш</string>
    <string name="tizimdan_chiqish">Тизимдан чиқиш</string>
    <string name="siz_rostdan_tizimdan_chiqmoqchimisiz">Сиз ростдан ҳам тизимдан чиқмоқчимисиз</string>
    <string name="ha">Ҳа</string>
    <string name="ma_lumotlarni_yangilash">Маълумотларни янгилаш</string>
    <string name="malumotlar_yangilandi">Маълумотлар янгиланди</string>
    <string name="yangi_buyurtmalar">Янги буюртмалар</string>
    <string name="qabul_qilingan_buyurtmalar">Қабул қилинган буюртмалар</string>
    <string name="buyurtma_izlash">Буюртма излаш</string>
    <string name="buyurtmachi_ma_lumotlari">Буюртмачининг маълумотлари</string>
    <string name="buyurtmachi_manzili">Буюртмачининг манзили</string>
    <string name="qabul_qilish">Қабул қилиш</string>
    <string name="o_chirish">Ўчириш</string>
    <string name="qo_ng_iroq">Қўнғироқ</string>
    <string name="xarita_orqali_ochish">Харита орқали очиш</string>
    <string name="buyurtma_malumotlari">Буюртма маълумотлари</string>
    <string name="yandexmaps_topildmadi">YandexMaps топилмади!</string>
    <string name="xarita_orqali_korish">Харита орқали кўриш учун YandexMaps ни ўрнатинг!</string>
    <string name="tolov">Тўлов</string>
    <string name="audio_yuklash">Аудио юклаш</string>
    <string name="buyurtma_qabul_qilish">Буюртма қабул қилиш</string>
    <string name="siz_ushbu_buyurtmani_qabul_qildingiz">Сиз ушбу буюртмани қабул қилдингиз</string>
    <string name="buyurtmani_ochirish">Буюртмани ўчириш</string>
    <string name="siz_rostdan_buyurtmani_ochirmoqchimisiz">Сиз ростдан ҳам ушбу буюртмани ўчирмоқчимисиз?</string>
    <string name="buyurtma_ochirildi">Буюртма ўчирилди!</string>
    <string name="yangi">Янги</string>
    <string name="tahrirlash">Таҳрирлаш</string>
    <string name="pasport_seriya_raqami">Паспорт серия рақами</string>
    <string name="shaxsiy_identifikatsiya_raqami_14_raqam">Шахсий идентификация рақами (14 рақам)</string>
    <string name="pasport_rasmini_tanlang">Паспорт расмини танланг</string>
    <string name="pasport_malumotlari">Паспорт маълумотлари</string>
    <string name="pasport_seriya_raqamini_toliq_kiriting">Паспорт серия рақамини тўлиқ киритинг</string>
    <string name="pasport_shir_toliq_kiriting">Паспорт ЖШИР ни тўлиқ киритинг</string>
    <string name="pasport_malumotlari_yuklandi">Паспорт маълумотлари муваффақиятли юкланди</string>
    <string name="yordam">Ёрдам</string>
    <string name="pochta_yuborish_uchun_avval_pasport_malumotlar">Почта юбориш учун аввал паспорт маълумотларингизни юклашингиз керак</string>
    <string name="sahifani_ochish">Саҳифани очиш</string>
    <string name="buyumlar">Буюмлар</string>
    <string name="buyum_nomi">Буюм номи</string>
    <string name="buyum_soni">Буюм сони</string>
    <string name="iltimos_kamida_1ta_buyumni_kiriting">Илтимос камида 1 та буюмни киритинг</string>
    <string name="yangi_foydalanuvchi_yaratildi">Янги фойдаланувчи яратилди</string>
    <string name="audio_tanlang">Аудиони танланг</string>
    <string name="audio_yuklandi">Аудио юкланди</string>
    <string name="taxrirlash">Таҳрирлаш</string>
    <string name="buyumni_ochirish">Буюмни ўчириш</string>
    <string name="siz_buyumni_ochirmoqchimisiz">Сиз ростдан ҳам ушбу буюмни ўчирмоқчимисиз?</string>
    <string name="buyum_ochirildi">Буюм муваффақиятли ўчирилди</string>
    <string name="buyum_nomini_kiriting">Буюм номини киритинг</string>
    <string name="buyum_sonini_kiriting">Буюм сонини киритинг</string>
    <string name="buyumni_taxrirlash">Буюмни таҳрирлаш</string>
    <string name="buyum_qo_shish">Буюм қўшиш</string>
    <string name="buyum_qoshildi">Буюм қўшилди</string>
    <string name="buyumni_taxrirlandi">Буюм таҳрирланди</string>
    <string name="naqt">Нақт</string>
    <string name="plastik">Пластик</string>
    <string name="summani_kiriting">Суммани киритинг</string>
    <string name="to_lov_turi">Тўлов тури</string>
    <string name="to_lov_miqdori">Тўлов миқдори</string>
    <string name="qabul_qilingan_to_lov">Қабул қилинган тўловлар</string>
    <string name="tolov_qilish">Тўлов қилиш</string>
    <string name="tolov_qabul_qilindi">Тўлов қабул қилинди</string>
    <string name="to_lov_miqdorini_kiriting">Тўлов миқдорини киритинг</string>
    <string name="buyurtmani_taxrirlash">Буюртмани таҳрирлаш</string>
    <string name="status">Статус</string>
    <string name="yuboruvchi_malumotlari">Юборувчи маълумотлари</string>
    <string name="ism_va_familya">Исм ва фамиля</string>
    <string name="manzil">Манзил</string>
    <string name="ovozli_xabarlar">Овозли хабарлар</string>
    <string name="barcodeni_kiriting">Barcode ни киритинг!</string>
    <string name="skaner_qilish">Сканер қилиш</string>
    <string name="barcode_skaner_qilinmadi">Barcode ни сканер қилиб бўлмади, илтимос қайта уриниб кўринг!</string>
    <string name="shartlarga_roziman">Шартларга розиман</string>
    <string name="batafsil">Батафсил</string>
    <string name="tashish_shartlari">Фойдаланиш шартлари</string>
    <string name="aloqa_uchun">Aлоқа учун</string>
    <string name="siz_ozingizning_telefon_raqamingizga_pochta_yubora_olmaysiz">Сиз ўзингизнинг телефон рақамингизга почта юбора олмайсиз!</string>
    <string name="otkazib_yuborish">Ўтказиб юбориш</string>
    <string name="iltimos_hozirgi_manzilingizni_xarita_orqali_korsating">Илтимос ҳозирги манзилингизни харита орқали кўрсатинг!</string>
    <string name="qabul_qiluvchi">Қабул қилувчи</string>
    <string name="yangi_buyurtma">Янги буюртма</string>
</resources>