<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/asosiy" />

    <item
        android:id="@+id/tariffFragment"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/tariflar" />

    <item
        android:id="@+id/createMailFragment"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/yuk_yuborish"
        />

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/yangiliklar" />

    <item
        android:id="@+id/cabinetFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/kabinet" />
</menu>